--- a/TvApp.html
+++ b/TvApp.html
@@ -19,23 +19,23 @@
 
     <div class="logos screen" id="character-carousel">
         <div class="logos-slide">
-            <img src="C:\Users\szymo\Desktop\lego\Grafiki\71007-11.jpg" />
-            <img src="C:\Users\szymo\Desktop\lego\Grafiki\8804-14.jpg" />
-            <img src="C:\Users\szymo\Desktop\lego\Grafiki\njo032.png" />
-            <img src="C:\Users\szymo\Desktop\lego\Grafiki\njo046.png" />
-            <img src="C:\Users\szymo\Desktop\lego\Grafiki\71027-8.jpg" />
-            <img src="C:\Users\szymo\Desktop\lego\Grafiki\coltlbm21.png" />
-            <img src="C:\Users\szymo\Desktop\lego\Grafiki\sh173.png" />
+            <img src="imgs/postacie/1.jpg" />
+            <img src="imgs/postacie/2.jpg" />
+            <img src="imgs/postacie/3.jpg" />
+            <img src="imgs/postacie/4.jpg" />
+            <img src="imgs/postacie/5.jpg" />
+            <img src="imgs/postacie/6.jpg" />
+            <img src="imgs/postacie/7.jpg" />
         </div>
 
         <div class="logos-slide">
-            <img src="C:\Users\szymo\Desktop\lego\Grafiki\71007-11.jpg" />
-            <img src="C:\Users\szymo\Desktop\lego\Grafiki\8804-14.jpg" />
-            <img src="C:\Users\szymo\Desktop\lego\Grafiki\njo032.png" />
-            <img src="C:\Users\szymo\Desktop\lego\Grafiki\njo046.png" />
-            <img src="C:\Users\szymo\Desktop\lego\Grafiki\71027-8.jpg" />
-            <img src="C:\Users\szymo\Desktop\lego\Grafiki\coltlbm21.png" />
-            <img src="C:\Users\szymo\Desktop\lego\Grafiki\sh173.png" />
+            <img src="imgs/postacie/1.jpg" />
+            <img src="imgs/postacie/2.jpg" />
+            <img src="imgs/postacie/3.jpg" />
+            <img src="imgs/postacie/4.jpg" />
+            <img src="imgs/postacie/5.jpg" />
+            <img src="imgs/postacie/6.jpg" />
+            <img src="imgs/postacie/7.jpg" />
         </div>
     </div>
 
