--- a/TvApp.html
+++ b/TvApp.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-    <img class="screen" id="TossCoin" src="imgs/bigTossCoin.png" width="1920" height="1080">
-    <img class="screen" id="PutFinger" src="imgs/bigPutFinger.png" width="1920" height="1080">
-    <img class="screen" id="WaitGettingInfo" src="imgs/bigWait.png" width="1920" height="1080">
-    <img class="screen" id="SelectingCharacter" src="imgs/bigSelectingCharacter.png" width="1920" height="1080">
+    <img class="screen" id="TossCoin" src="imgs/startowyEkranfullHD.png" width="1080" height="1920">
+    <img class="screen" id="PutFinger" src="imgs/zblizpalce.png" width="1080" height="1920">
+    <img class="screen" id="WaitGettingInfo" src="imgs/jeszczecwilka.png" width="1080" height="1920">
+    <img class="screen" id="SelectingCharacter" src="imgs/losowanie.png" width="1080" height="1920">
 
 
     <div class="logos screen" id="character-carousel">
