--- a/RaspApp.html
+++ b/RaspApp.html
@@ -11,8 +11,8 @@
 
 <body>
 
-    <img class="screen" id="Logo" src="imgs/smallLogo.png" width="600" height="1024">
-    <img class="screen" id="PutFinger" src="imgs/bigPutFinger.png" width="600" height="1024">
+    <img class="screen" id="Logo" src="imgs/startowyMaly.png" width="600" height="1024">
+    <img class="screen" id="PutFinger" src="imgs/skanujmalyekran.png" width="600" height="1024">
     <img class="screen" id="FingerReceived" src="imgs/smallFingerReceived.png" width="600" height="1024">
     <img class="screen" id="SelectingCharacter" src="imgs/smallSelectingCharacter.png" width="600" height="1024">
 
