--- a/RaspApp.html
+++ b/RaspApp.html
@@ -14,7 +14,7 @@
     <img class="screen" id="Logo" src="imgs/startowyMaly.png" width="600" height="1024">
     <img class="screen" id="PutFinger" src="imgs/skanujmalyekran.png" width="600" height="1024">
     <!-- <img class="screen" id="FingerReceived" src="imgs/smallFingerReceived.png" width="600" height="1024"> -->
-    <img class="screen" id="SelectingCharacter" src="imgs/smallSelectingCharacter.png" width="600" height="1024">
+    <img class="screen" id="SelectingCharacter" src="imgs/malylosowanie.png" width="600" height="1024">
 
     <div class="screen" id="FingerReceived">
         <video loop id="FingerReceivedVideo">
