--- a/RaspApp.html
+++ b/RaspApp.html
@@ -22,6 +22,9 @@
         </video>
     </div>
 
+    <img class="screen" id="SelectedCharacter" src="imgs/malywylosowano.png" width="600" height="1024">
+
+
     <script src="./RaspRenderer.js"></script>
 </body>
 
