--- a/TvApp.html
+++ b/TvApp.html
@@ -125,6 +125,9 @@
         </div>
     </div>
 
+    <img class="screen" id="SelectedCharacter" src="imgs/wylosowano.png" width="1080" height="1920">
+
+
     <script src="./TvRenderer.js"></script>
 </body>
 
