--- a/RaspApp.html
+++ b/RaspApp.html
@@ -17,7 +17,7 @@
     <img class="screen" id="SelectingCharacter" src="imgs/malylosowanie.png" width="600" height="1024">
 
     <div class="screen" id="FingerReceived">
-        <video loop id="FingerReceivedVideo">
+        <video id="FingerReceivedVideo">
             <source src="imgs/scanreki(1).mp4" type="video/mp4">
         </video>
     </div>
