--- a/TvApp.html
+++ b/TvApp.html
@@ -125,6 +125,8 @@
         </div>
     </div>
 
+
+    <img class="screen postac" id="wybranapostac" src="imgs/postaciev2/1.png" />
     <img class="screen" id="SelectedCharacter" src="imgs/wylosowano.png" width="1080" height="1920">
 
 
