--- a/RaspApp.html
+++ b/RaspApp.html
@@ -6,15 +6,16 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <title>Hello World!</title>
+    <link rel="stylesheet" href="./a.css" />
 
 </head>
 
 <body>
 
-    <img class="screen" id="Logo" src="imgs/startowyMaly.png" width="600" height="1024">
-    <img class="screen" id="PutFinger" src="imgs/skanujmalyekran.png" width="600" height="1024">
+    <img class="screen" id="Logo" src="imgs/10_maly_startowy.png" width="600" height="1024">
+    <img class="screen" id="PutFinger" src="imgs/11_maly_powrzuceniu.png" width="600" height="1024">
     <!-- <img class="screen" id="FingerReceived" src="imgs/smallFingerReceived.png" width="600" height="1024"> -->
-    <img class="screen" id="SelectingCharacter" src="imgs/malylosowanie.png" width="600" height="1024">
+    <img class="screen" id="SelectingCharacter" src="imgs/12_maly_loswanie.png" width="600" height="1024">
 
     <div class="screen" id="FingerReceived">
         <video id="FingerReceivedVideo">
@@ -22,7 +23,7 @@
         </video>
     </div>
 
-    <img class="screen" id="SelectedCharacter" src="imgs/malywylosowano.png" width="600" height="1024">
+    <img class="screen" id="SelectedCharacter" src="imgs/13_maly_wylosowano.png" width="600" height="1024">
 
 
     <script src="./RaspRenderer.js"></script>
