--- a/TvApp.html
+++ b/TvApp.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-    <img class="screen" id="TossCoin" src="imgs/startowyEkranfullHD.png" width="1080" height="1920">
-    <img class="screen" id="PutFinger" src="imgs/zblizpalce.png" width="1080" height="1920">
-    <img class="screen" id="WaitGettingInfo" src="imgs/jeszczecwilka.png" width="1080" height="1920">
-    <img class="screen" id="SelectingCharacter" src="imgs/losowanie.png" width="1080" height="1920">
+    <img class="screen" id="TossCoin" src="imgs/0_duzy_startowy.png" width="1080" height="1920">
+    <img class="screen" id="PutFinger" src="imgs/1_duzy_zblizpalce.png" width="1080" height="1920">
+    <img class="screen" id="WaitGettingInfo" src="imgs/2_duzy_przetwarzanie.png" width="1080" height="1920">
+    <img class="screen" id="SelectingCharacter" src="imgs/3_duzy_losowanie.png" width="1080" height="1920">
 
 
     <div class="logos screen" id="character-carousel">
@@ -127,7 +127,7 @@
 
 
     <img class="screen postac" id="wybranapostac" src="imgs/postaciev2/1.png" />
-    <img class="screen" id="SelectedCharacter" src="imgs/wylosowano.png" width="1080" height="1920">
+    <img class="screen" id="SelectedCharacter" src="imgs/4_duzy_wylosowano.png" width="1080" height="1920">
 
 
     <script src="./TvRenderer.js"></script>
