--- a/TvApp.html
+++ b/TvApp.html
@@ -66,6 +66,21 @@
             <img src="imgs/postaciev2/45.png" />
             <img src="imgs/postaciev2/46.png" />
             <img src="imgs/postaciev2/47.png" />
+            <img src="imgs/postaciev2/48.png" />
+            <img src="imgs/postaciev2/49.png" />
+            <img src="imgs/postaciev2/50.png" />
+            <img src="imgs/postaciev2/51.png" />
+            <img src="imgs/postaciev2/52.png" />
+            <img src="imgs/postaciev2/53.png" />
+            <img src="imgs/postaciev2/54.png" />
+            <img src="imgs/postaciev2/55.png" />
+            <img src="imgs/postaciev2/56.png" />
+            <img src="imgs/postaciev2/57.png" />
+            <img src="imgs/postaciev2/58.png" />
+            <img src="imgs/postaciev2/59.png" />
+            <img src="imgs/postaciev2/60.png" />
+            <img src="imgs/postaciev2/61.png" />
+            <img src="imgs/postaciev2/62.png" />
         </div>
 
         <div class="logos-slide">
@@ -116,6 +131,21 @@
             <img src="imgs/postaciev2/45.png" />
             <img src="imgs/postaciev2/46.png" />
             <img src="imgs/postaciev2/47.png" />
+            <img src="imgs/postaciev2/48.png" />
+            <img src="imgs/postaciev2/49.png" />
+            <img src="imgs/postaciev2/50.png" />
+            <img src="imgs/postaciev2/51.png" />
+            <img src="imgs/postaciev2/52.png" />
+            <img src="imgs/postaciev2/53.png" />
+            <img src="imgs/postaciev2/54.png" />
+            <img src="imgs/postaciev2/55.png" />
+            <img src="imgs/postaciev2/56.png" />
+            <img src="imgs/postaciev2/57.png" />
+            <img src="imgs/postaciev2/58.png" />
+            <img src="imgs/postaciev2/59.png" />
+            <img src="imgs/postaciev2/60.png" />
+            <img src="imgs/postaciev2/61.png" />
+            <img src="imgs/postaciev2/62.png" />
         </div>
     </div>
 
