--- a/TvApp.html
+++ b/TvApp.html
@@ -150,7 +150,7 @@
     </div>
 
 
-    <img class="screen postac" id="wybranapostac" src="imgs/postaciev2/1.png" />
+    <img class="screen postac" id="wybranapostac" src="imgs/postaciev2/1.png" width="1080" height="1920" />
     <img class="screen" id="SelectedCharacter" src="imgs/4_wylosowano.png" width="1080" height="1920">
 
 
